# factaday

./: .env.example  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
src/: database.py  enums.py  main.py  models.py  router.py  schemas.py
templates/: index.html
